<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="add_data_cat">add_data_cat</string>
    <string name="search_data_cat">search_data_cat</string>
    <string name="menu_user">menu_user</string>
    <string name="textview2">ค้นหาข้อมูลแมว</string>
    <string name="text_bloodtype">กรุ๊ปเลือดแมว</string>
    <string name="radiobutton">A</string>
    <string name="radiobutton2">B</string>
    <string name="radiobutton3">AB</string>
    <string name="search_button">ค้นหา</string>
    <string name="button_add" />
    //หน้า 2
    <string name="textview">ผลการค้นหา</string>
    <string name="resule">จำนวนที่พบในบริเวณใกล้เคียง</string>
    <string name="back_icon">back_icon</string>
    <string name="local">local</string>
    <string name="coin">coin</string>
    <string name="_0">0</string>
    <string name="textview5">ชำระเงิน</string>
    <string name="textview9">คน</string>
    <string name="textview6">10</string>
    <string name="textview7">เพื่อเข้าถึงข้อมูล</string>
    <string name="button_pay">ยืนยัน</string>

    <string name="cat_name">ชื่อแมว</string>
    <string name="cat_type">สายพันธุ์ </string>
    <string name="cat_blood">กรุ๊ปเลือด</string>
    <string name="cat_age">อายุ</string>
    <string name="cat_weight">น้ำหนัก</string>
    <string name="cat_Health_check_date">วันที่ตรวจสุขภาพ</string>
    <string name="cat_Latest_donation">วันที่บริจาคเลือด</string>
    <string name="Line">Line</string>
    <string name="Search">ผลการค้นหา</string>
    <string name="tell_button">tell_button</string>
    <string name="cat_pic">Cat_pic</string>
    <string name="line_icon">line_icon</string>

    <string name="pem">เพิ่มข้อมูล</string>
    <string name="cat">ชื่อแมว</string>
    <string name="group">กรุ๊ปเลือด</string>
    <string name="ago">อายุ(ปี)</string>
    <string name="namnac">น้ำหนัก(กก.)</string>
    <string name="date">วันที่ตรวจสุขภาพ</string>
    <string name="blood">วันที่บริจาคเลือด</string>
    <string name="wet">*แมวที่บริจาคเลือดได้ต้องมีอายู 2-3 ปีขึ้นไปและมีน้ำหนักมากกว่า 3 กิโลกรัมขึ้นไป</string>
    <string name="ok">ยืนยัน</string>
    <string name="_111">111</string>
    <string name="image">TODO</string>
    <string name="registered_cat">แมวของ</string>
    <string name="plas">เพิ่ม</string>
    <string name="add_up">เแก้ไข</string>
    <string name="pesonal">ข้อมูลส่วนตัว</string>
    <string name="search">ค้นหา</string>
    <string name="black">กดกลับ</string>
    <string name="ima">รูปภาพ</string>
    <string name="edit">แก้ไขข้อมูล</string>
    <string name="icon1">icon1</string>
    <string name="icon2">TODO</string>
    <string name="icon3">TODO</string>
    <string name="manu">manu</string>
    <string name="groubblood">กรุ๊ปเลือด</string>

    <string-array name="groupblood">
        <item>กรุ๊ปเลือด</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>

    <string name="text1">แก้ไขข้อมูล</string>
    <string name="text2">แก้ไขรหัส</string>
    <string name="logout">Logout</string>
    <string name="user_name">User_name</string>
    <string name="editdata">แก้ไขข้อมูล</string>
    <string name="confirm">ยืนยัน</string>
    <string name="name">ชื่อ</string>
    <string name="lastname">นามสกุล</string>
    <string name="tel">เบอรโทรศัพท์</string>
    <string name="lineID">"@LineID</string>
    <string name="editpassword">แก้ไขรหัส</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="User_name">ชื่อผู้ใช้งาน</string>
    <string name="coin_icon">coin_icon</string>
    <string name="head_catinfo">แก้ไขข้อมูลแมว</string>
    <string name="y">ปี</string>
    <string name="kg">กก.</string>
    <string name="yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="calicon">calIcon</string>
    <string name="callicon">callIcon</string>
    <string name="add_coin">(เติมเงิน)</string>
    <string name="addcoin">เติมเงิน</string>
    <string name="select">ค้นหาข้อมูลแมว</string>
    <string name="countdown">countdown</string>
</resources>
