<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayDataCat">

    <View
        android:id="@+id/main_header2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/viewStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_header2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_header2" />

    <View
        android:id="@+id/viewStatus"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#F3F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/menu_username"
        android:layout_width="200dp"
        android:layout_height="76dp"
        android:text="@string/resule"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewStatus"
        app:layout_constraintTop_toTopOf="@+id/viewStatus" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/back_icon"
        app:layout_constraintBottom_toTopOf="@+id/viewStatus"
        app:layout_constraintEnd_toStartOf="@+id/View"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_header2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leftarrow_121320" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/local"
        app:layout_constraintBottom_toBottomOf="@+id/viewStatus"
        app:layout_constraintEnd_toStartOf="@+id/menu_username"
        app:layout_constraintStart_toStartOf="@+id/viewStatus"
        app:layout_constraintTop_toTopOf="@+id/viewStatus"
        app:srcCompat="@drawable/placeholder_121295" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/coin"
        app:layout_constraintBottom_toTopOf="@+id/viewStatus"
        app:layout_constraintStart_toEndOf="@+id/View"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/money_4567" />

    <TextView
        android:id="@+id/menu_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/viewStatus"
        app:layout_constraintEnd_toEndOf="@+id/main_header2"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview5"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewStatus" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview6"
        android:textColor="@color/textcolor"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview7"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:background="@color/buttoncolor"
        android:text="@string/button_pay"
        android:textColor="@color/textcolor2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_0"
        android:textColor="@color/textcolor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/menu_username"
        app:layout_constraintTop_toTopOf="@+id/viewStatus" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/textview9"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/menu_username" />

</androidx.constraintlayout.widget.ConstraintLayout>